--- a/.github/workflows/blank.yml
+++ b/.github/workflows/blank.yml
@@ -4,9 +4,6 @@ name: CI
 
 # Controls when the workflow will run
 on:
-  # Triggers the workflow on push or pull request events but only for the "main" branch
-  push:
-    branches: [ "main" ]
   workflow_dispatch:
     
   
@@ -15,4 +12,4 @@ jobs:
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v3
-      - uses: flaticols/tagger@main
+      - uses: arjen-ag5/tagger@main
